--- a/src/Modules/LandingPage/Components/Services/ServicesSlider/ServicesSlider.module.scss
+++ b/src/Modules/LandingPage/Components/Services/ServicesSlider/ServicesSlider.module.scss
@@ -8,8 +8,8 @@
       top: -15px;
       left: 20px;
       text-align: left;
-      color: #fff;
-      z-index: -10 !important;
+      color: #ffffff;
+      z-index: 2;
       & > h3 {
         margin-top: -20px;
       }
