--- a/src/Modules/LandingPage/Pages/landingPage.module.scss
+++ b/src/Modules/LandingPage/Pages/landingPage.module.scss
@@ -1,16 +1,30 @@
 .landingPage {
-  max-width: 1200px;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: -99999999;
   .slider {
     width: 100%;
+    z-index: -10;
     position: relative;
-    top: 0;
-    left: 0;
-    background-color: aqua;
+    .sliderHeaderContainer {
+      position: absolute;
+      height: 680px;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 1;
+      width: 1200px;
+      margin: auto;
+    }
   }
-  .sliderHeader {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
+
+  .services {
+    margin-top: 200px;
+  }
+  .freelance {
+  }
+  .marketPlace {
   }
 }
