--- a/src/Modules/LandingPage/Components/MarketPlace/MarketPlace.module.scss
+++ b/src/Modules/LandingPage/Components/MarketPlace/MarketPlace.module.scss
@@ -1,9 +1,11 @@
 .marketPlace {
+  margin-bottom: 100px;
   .marketPlace__header {
     margin-bottom: 60px;
     & > h2 {
       font-size: 32px;
       line-height: 120%;
+      color: #404145;
     }
   }
   .marketPlace__items {
@@ -49,7 +51,7 @@
         position: absolute;
         top: 36px;
         right: 50%;
-        z-index: 1;
+        z-index: 2;
         transform: translateX(50%);
         padding: 0 0 8px;
         width: 48px;
