--- a/src/Modules/LandingPage/Components/Services/Services.module.scss
+++ b/src/Modules/LandingPage/Components/Services/Services.module.scss
@@ -2,9 +2,11 @@
   width: 100%;
   & header {
     width: 100%;
-    & > header > h2 {
+    & h2 {
       font-size: 32px;
       line-height: 120%;
+      font-weight: 700;
+      color: #404145;
     }
   }
 }
