fixed background color

--- a/src/Modules/UserProfile/Components/Profile/Avatar/Profile__Avatar.module.scss
+++ b/src/Modules/UserProfile/Components/Profile/Avatar/Profile__Avatar.module.scss
@@ -12,6 +12,7 @@
   width: 400px;
   height: 421px;
   border: 1px solid #dadbdd;
+  background-color: #fff;
   .userAvatarWrapper {
     .userContentWrapper {
       padding: 30px;
