--- a/src/Modules/UserProfile/Components/Profile/EarnBadges/EarnBadges.module.scss
+++ b/src/Modules/UserProfile/Components/Profile/EarnBadges/EarnBadges.module.scss
@@ -2,7 +2,7 @@
   max-width: 400px;
   border: 1px solid #dadbdd;
   margin-top: 30px;
-
+  background-color: #fff;
   .badgeWrapper {
     padding: 30px;
     .badge__item {
