--- a/src/ReusableComponents/Profile_CardLayOut/CardLayout.module.scss
+++ b/src/ReusableComponents/Profile_CardLayOut/CardLayout.module.scss
@@ -1,5 +1,6 @@
 .cardLayout {
-  max-width: 400px;
+  width: 100%;
+  height: 100%;
   border: 1px solid #dadbdd;
   margin-top: 30px;
   background-color: #fff;
