--- a/src/Modules/UserProfile/Components/Profile/Profile.module.scss
+++ b/src/Modules/UserProfile/Components/Profile/Profile.module.scss
@@ -1,6 +1,6 @@
-.MainContent {
-  background-color: #f7f7f7;
-  .MainContentWrapper {
-    padding: 50px 50px;
-  }
-}
+// .MainContent {
+//   background-color: #f7f7f7;
+//   .MainContentWrapper {
+//     padding: 50px 50px;
+//   }
+// }
