implemented jobs-card

--- a/src/Modules/UserProfile/Components/Header/UserProfileHeader.module.scss
+++ b/src/Modules/UserProfile/Components/Header/UserProfileHeader.module.scss
@@ -3,6 +3,7 @@
   .header__Appbar {
     background-color: #fff !important;
     box-shadow: none;
+    padding: 8px 0px;
     .header__Search {
       border: 1px solid #000;
     }
