--- a/src/Modules/JobDetail/Page/JobDetail.module.scss
+++ b/src/Modules/JobDetail/Page/JobDetail.module.scss
@@ -11,6 +11,15 @@
         }
         .mainContent__header {
         }
+        .mainContent__subHeader {
+        }
+        .mainContent__jobAvatar {
+          & > img {
+            width: 100%;
+            height: 400px;
+            margin: 15px 0px;
+          }
+        }
       }
     }
   }
