--- a/src/Modules/LandingPage/Components/Slider/SliderHeader/SliderHeader.module.scss
+++ b/src/Modules/LandingPage/Components/Slider/SliderHeader/SliderHeader.module.scss
@@ -4,4 +4,12 @@
   transform: translateY(-50%);
   color: #fff;
   z-index: 3;
+  .inputField {
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+    width: 100%;
+    height: 52px;
+  }
 }
