--- a/src/Modules/UserProfile/Components/ActiveGig/ActiveGig.module.scss
+++ b/src/Modules/UserProfile/Components/ActiveGig/ActiveGig.module.scss
@@ -1,8 +1,8 @@
 .activeGig {
   width: 100%;
   &__container {
-    padding: 30px;
     &_header {
+      text-align: center;
       border: 1px solid #dadbdd;
       background-color: #fff;
       h4 {
