--- a/src/Modules/LandingPage/Components/Slider/Slider.module.scss
+++ b/src/Modules/LandingPage/Components/Slider/Slider.module.scss
@@ -2,7 +2,7 @@
   background-position: bottom;
   background-size: auto 100%;
   background-repeat: no-repeat;
-  background-color: #023a15;
+  background-color: $color;
   background-image: $url;
 }
 .sliderContainer {
@@ -17,25 +17,25 @@
     }
     .backGround2 {
       @include backGroundSlider(
-        _,
+        hsl(346deg 44% 50%),
         url('https://fiverr-res.cloudinary.com/image/upload/q_auto,f_auto/v1/attachments/generic_asset/asset/2413b8415dda9dbd7756d02cb87cd4b1-1599595203021/bg-hero-2-1792-x2.png')
       );
     }
     .backGround3 {
       @include backGroundSlider(
-        _,
+        hsl(345deg 69% 20%),
         url('https://fiverr-res.cloudinary.com/image/upload/q_auto,f_auto/v1/attachments/generic_asset/asset/d14871e2d118f46db2c18ad882619ea8-1599835783974/bg-hero-3-1792-x2.png')
       );
     }
     .backGround4 {
       @include backGroundSlider(
-        _,
+        #023a15,
         url('https://fiverr-res.cloudinary.com/image/upload/q_auto,f_auto/v1/attachments/generic_asset/asset/93085acc959671e9e9e77f3ca8147f82-1599427734106/bg-hero-4-1792-x2.png')
       );
     }
     .backGround5 {
       @include backGroundSlider(
-        _,
+        hsl(13deg 95% 26%),
         url('https://fiverr-res.cloudinary.com/image/upload/q_auto,f_auto/v1/attachments/generic_asset/asset/bb5958e41c91bb37f4afe2a318b71599-1599344049977/bg-hero-5-1792-x2.png')
       );
     }
