--- a/src/Modules/LandingPage/Components/Services/ServicesSlider/ServicesSlider.module.scss
+++ b/src/Modules/LandingPage/Components/Services/ServicesSlider/ServicesSlider.module.scss
@@ -12,6 +12,10 @@
       z-index: 2;
       & > h3 {
         margin-top: -20px;
+        color: #ffffff;
+      }
+      & > h6 {
+        color: #ffffff;
       }
     }
   }
