--- a/src/Modules/LandingPage/Pages/landingPage.module.scss
+++ b/src/Modules/LandingPage/Pages/landingPage.module.scss
@@ -1,3 +1,5 @@
+@import '../../../index.scss' ;
+
 .landingPage {
   position: relative;
   top: 0;
@@ -28,4 +30,7 @@
   .marketPlace {
     margin-top: 100px;
   }
+}
+@include responsive (mobile) {
+  
 }
