--- a/src/Modules/LandingPage/Components/Services/ServicesSlider/styles.css
+++ b/src/Modules/LandingPage/Components/Services/ServicesSlider/styles.css
@@ -1,6 +1,7 @@
 .swiper {
   width: 100%;
   height: 100%;
+  overflow: visible;
 }
 
 .swiper-slide {
@@ -31,10 +32,10 @@
   border-radius: 5px;
 }
 .swiper-button-prev {
-  left: -20px !important;
+  left: -15px !important;
 }
 .swiper-button-next {
-  right: -20px !important;
+  right: -15px !important;
 }
 .swiper-button-prev,
 .swiper-button-next {
@@ -53,4 +54,9 @@
 .swiper-button-next::after {
   color: #000;
   font-size: 18px !important;
+}
+
+.swiper-button-disabled {
+  pointer-events: none !important;
+  cursor: not-allowed;
 }
